--- a/client/src/components/footer/Footer.scss
+++ b/client/src/components/footer/Footer.scss
@@ -4,9 +4,14 @@
 
 .footer {
     background-color: var(--blue-200);
-    padding: 4.8rem 0 2.4rem;
+    padding: 4.8rem 0 10rem;
     position: relative;
-    z-index: 100;
+    z-index: 2;
+    position: fixed;
+    width: 100%;
+    height: 35rem;
+    bottom: 0;
+    left: 0;
 
     .footer__logo {
         max-width: 8rem;
