--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -269,11 +269,6 @@ textarea {
     overflow: hidden;
 }
 
-
-.main {
-    min-height: 100svh;
-}
-
 /* ------------------------------------------------------------ *\
   Shell
 \* ------------------------------------------------------------ */
